--- a/html/page3.html
+++ b/html/page3.html
@@ -22,32 +22,33 @@ integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52n
 
                                                           <!--  HEADER -->
 
- <div class="header container-fluid d-flex justify-content-center">
-    <div class="d-flex justify-content-center align-items-center w-100 text-white">
-        <div class="fw-bold d-flex align-items-center header-items ms-3">
-            <img src="../images/Group272.svg" class="img-fluid logo">
-            <p class="ms-2 ms-md-4 mb-0">Azərbaycan İnformasiya və <br> Kommunikasiya Texnologiyaları<br>  Sənayesi 
-            Assosiasiyası</p>
-        </div>
-        <div class="ms-auto d-flex text-white me-3">
-            <div class="dropdown d-sm-none d-md-block me-3">
-               <button class="text-white border-1 bg-transparent border-white rounded-5 px-3 py-2 f-12 f-md-16" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown">
-                AZ <i class="bi bi-chevron-down"></i>
-                </button>
-                <ul class="dropdown-menu text-center mt-1 bg-transparent border-0" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item text-white" href="#">EN</a></li>
-                <li><a class="dropdown-item text-white" href="#">RU</a></li>
-                <li><a class="dropdown-item text-white" href="#">FR</a></li>
-                </ul>
+ <div class="header container-fluid d-flex justify-content-center p-5">
+            <div class="d-flex justify-content-center align-items-center w-100 text-white">
+
+                <div class="fw-bold d-flex align-items-center header-left">
+                    <img src="../images/Group272.svg" class="img-fluid logo">
+                    <p class="ms-auto ms-md-2 mb-0">Azərbaycan İnformasiya və <br> Kommunikasiya Texnologiyaları<br>  Sənayesi Assosiasiyası</p>
+                </div>
+    
+                <div class="ms-auto d-flex text-white ">
+                    <div class="dropdown d-none d-md-block">
+                        <button class="text-white border-1 bg-transparent border-white rounded-5 px-3 py-2 f-12 f-md-16" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown">
+                        AZ <i class="bi bi-chevron-down"></i>
+                        </button>
+                        <ul class="dropdown-menu text-center mt-1 bg-transparent border-0" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item text-white" href="#">EN</a></li>
+                        <li><a class="dropdown-item text-white" href="#">RU</a></li>
+                        </ul>
+                    </div>
+        
+                    <div class="d-flex align-items-center header-right ms-4">
+                        <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button">
+                        <a onclick="openFunction()" href="#"><img src="../images/Group177.svg"></a>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="d-flex align-items-center ms-auto">
-                <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button">
-                <a onclick="openFunction()" href="#"><img src="../images/Group177.svg"></a>
-                </a>
-            </div>
-        </div>
     </div>
-</div>
 
                                                              <!--HEADER ENDS-->
 
