--- a/html/page6.html
+++ b/html/page6.html
@@ -56,14 +56,14 @@ integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52n
 <div class="d-flex text-white header-link ms-5 mt-4 f-15">
     <a href="#" class="text-white ms-3">Ana Səhifə</a>
     <ul>
-        <li><a href="#" class="text-white ms-3">Müşahidə Şurası</a></li>
+        <li><a href="#" class="text-white ms-3">Mərkəzi İdarəetmə</a></li>
     </ul>
 </div>
 
 
 <div class="container-fluid history text-white pb-4 mb-4">
 
-    <h4 class=" ms-4 pt-4 fw-bold">Müşahidə Şurası</h4>
+    <h4 class=" ms-4 pt-4 fw-bold">Mərkəzi idarəetmə</h4>
 
     <div class="row mt-4 ms-2">
         
